source/css/rainmeter.css
/*
 * Stylesheet for Rainmeter.net
 * Requires: Bootstrap v4.0.0-beta
 * Original creator: Marco Vockner (https://github.com/MarcoPixel/)
 * Content licensed under Creative Commons BY-NC-SA 3.0.
 * 2017 - Rainmeter
*/


/* General styling  */

html {
  overflow-y: scroll;
  height: 100%;
}
body {
  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif !important;
  font-size: 0.9rem;
  font-weight: 400;
  z-index: 0;
  height: 100%;
  min-height: 100vh;
}
a {
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}
iframe, object, embed {
  max-width: 100%;
}
code {
  color: rgb(240, 91, 25);
  background-color: #f4f4f4;
}
.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  font-weight: 500;
}
.text-warning {
  color: rgb(240, 91, 25) !important;
}
.text-danger {
  color: rgb(233, 23, 6) !important;
}
.post {
  width: 100%;
  margin: 0 auto;
  text-align: justify;
  hyphens: auto;
}
.divider {
  margin-top: 1rem;
  margin-bottom: 1rem;
  border-width: 1px 0 0;
  border-top: 1px solid rgba(0, 0, 0, .1);
}
.content {
  padding-top: 2rem;
  padding-bottom: 2rem;
  -webkit-box-flex: 1;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}
.text-muted b {
    color: #364452;
}
footer {
  font-weight: 600;
  z-index: 2;
  padding-top: 2rem;
  padding-bottom: 2rem;
  color: rgba(0, 0, 0, .2);
  background-color: rgba(0, 0, 0, .03);
}
footer a {
  font-weight: 600;
  color: rgba(0, 0, 0, .35);
}
footer a:hover, footer a:focus {
  text-decoration: none;
}
@media (min-width: 576px) {
  body {
    font-size: 1rem;
  }
}
@media (min-width: 992px) {
  .post {
    width: 80%;
  }
}
@media (min-width: 1200px) {
  .container {
    max-width: 1026px;
  }
}
/* Hero */

.hero {
  position: relative;
  background-color: rgb(25, 81, 155);
  /* background-image: url("../img/bg.jpg"); */
  background-position: center 35%;
  background-size: cover;
}
.hero::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  content: '';
  opacity: .95;
  background-color: rgb(25, 81, 155);
  background-image: -webkit-gradient(linear, left top, right bottom, from(rgb(29, 53, 143)), to(rgb(12, 182, 196)));
  background-image: -webkit-linear-gradient(top left, rgb(29, 53, 143), rgb(12, 182, 196));
  background-image: -o-linear-gradient(top left, rgb(29, 53, 143), rgb(12, 182, 196));
  background-image: linear-gradient(to bottom right, rgb(29, 53, 143), rgb(12, 182, 196));
}
#hero.flat {
  background-color: rgb(25, 81, 155);
}

/* Navbar */

.navbar {
  z-index: 2;
  padding: 1.5rem 0 !important;
}
.navbar button:focus {
  outline: none;
}
.navbar .dropdown-divider {
  margin-top: 1rem;
  border-top: 1px solid rgba(255, 255, 255, .4);
}
.navbar li>a {
  font-size: 1.2rem;
  padding-top: .5rem;
  padding-bottom: .5rem;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
}
.navbar li>a:hover {
  color: rgba(255, 255, 255, .85) !important;
}
.navbar .nav-item.active a {
  font-weight: 600;
}
.navbar-nav {
  margin-top: .5rem;
}
.navbar-brand {
  padding: 0;
}
.navbar-brand img {
  width: 201px;
  image-rendering: -webkit-optimize-contrast;
}
@media (min-width: 992px) {
  .navbar ul>li>a {
    font-size: 1rem;
    padding-right: 0 !important;
    padding-left: 2.5rem !important;
  }
}

/* Main block styling */

.block {
  margin-top: 1rem;
}
.block-title {
  font-size: 2rem;
  font-weight: 400;
  margin-top: 1rem;
  margin-bottom: 1rem;
  text-align: center;
}
.block-bar {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.block-bar .icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
}
.block-bar svg {
  width: 2rem;
  height: 2rem;
}
.block-bar .title {
  font-size: 1.5rem;
  font-weight: 400;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.block-bar .additional a {
  margin-right: .2rem;
  margin-left: .2rem;
  text-decoration: none;
  color: inherit;
}
.block-bar .additional a:hover, .block-bar .additional a:focus {
  color: rgba(0, 0, 0, .9);
}
@media (min-width: 576px) {
  .block-bar .additional a {
    text-decoration: none;
  }
}
@media (min-width: 992px) {
  .block {
    margin-top: 2rem;
  }
  .block-bar {
    -webkit-box-pack: left;
    -ms-flex-pack: left;
    justify-content: left;
  }
  .block-bar .title {
    font-size: 2rem;
  }
}

/* Intro */

.intro {
  padding-top: 0;
  padding-bottom: 2rem;
  color: rgba(255, 255, 255, .6);
  text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
}
.intro h1 {
  font-size: 1.8rem;
  font-weight: 300;
  line-height: 1.2;
  margin-bottom: 1.5rem;
  color: rgb(255, 255, 255);
}
.intro p {
  font-size: 96%;
}
.intro p a {
  color: rgba(255, 255, 255, .9);
}
.intro .btn {
  margin-right: .5rem;
  padding-right: 1.75rem;
  padding-left: 1.75rem;
  text-transform: capitalize;
  text-shadow: none;
}
.intro .icon {
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.intro .icon svg {
  width: 1.25rem;
  height: 1.25rem;
  margin-right: .5rem;
}
.intro .btn:hover {
  color: rgb(25, 81, 155);
  border-color: rgb(248, 249, 250);
  background-color: rgb(248, 249, 250);
}
@media (min-width: 576px) {
  .intro {
    font-size: 1rem;
    padding-bottom: 4rem;
  }
  .intro h1 {
    font-size: 2.6rem;
  }
}
@media (min-width: 992px) {
  .intro {
    padding-top: 2rem;
  }
}
/* ... */

